reinit architecture as a monolithic service instead of 2 services
