# templater/internal/application/dto/dto.go
@@ -1,74 +1,0 @@
-// Package dto provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
-package dto
-
-// Defines values for HealthcheckProvisionResponseStatus.
-const (
-	Healthy        HealthcheckProvisionResponseStatus = "Healthy"
-	NotProvisioned HealthcheckProvisionResponseStatus = "NotProvisioned"
-	Unhealthy      HealthcheckProvisionResponseStatus = "Unhealthy"
-)
-
-// Defines values for ProvisionSiteRequestDomainType.
-const (
-	BringYourDomain ProvisionSiteRequestDomainType = "BringYourDomain"
-	DefaultDomain   ProvisionSiteRequestDomainType = "DefaultDomain"
-	SeparateDomain  ProvisionSiteRequestDomainType = "SeparateDomain"
-)
-
-// CheckDomainParams defines model for CheckDomainParams.
-type CheckDomainParams struct {
-	Domain string `json:"domain"`
-}
-
-// DomainAvailability defines model for DomainAvailability.
-type DomainAvailability struct {
-	Available bool `json:"available"`
-}
-
-// ErrorResponse defines model for ErrorResponse.
-type ErrorResponse struct {
-	Error string `json:"error"`
-}
-
-// HealthcheckProvisionRequest defines model for HealthcheckProvisionRequest.
-type HealthcheckProvisionRequest struct {
-	SiteID uint64 `json:"siteID"`
-}
-
-// HealthcheckProvisionResponse defines model for HealthcheckProvisionResponse.
-type HealthcheckProvisionResponse struct {
-	Status HealthcheckProvisionResponseStatus `json:"status"`
-}
-
-// HealthcheckProvisionResponseStatus defines model for HealthcheckProvisionResponse.Status.
-type HealthcheckProvisionResponseStatus string
-
-// ProvisionSiteRequest defines model for ProvisionSiteRequest.
-type ProvisionSiteRequest struct {
-	Domain     string                         `json:"domain"`
-	DomainType ProvisionSiteRequestDomainType `json:"domainType"`
-
-	// Fields json object with all widgets and fields of a site
-	Fields       map[string]interface{} `json:"fields"`
-	SiteID       uint64                 `json:"siteID"`
-	TemplateName string                 `json:"templateName"`
-}
-
-// ProvisionSiteRequestDomainType defines model for ProvisionSiteRequest.DomainType.
-type ProvisionSiteRequestDomainType string
-
-// ProvisionSiteResponse defines model for ProvisionSiteResponse.
-type ProvisionSiteResponse struct {
-	SiteID uint64 `json:"siteID"`
-}
-
-// CheckDomainJSONRequestBody defines body for CheckDomain for application/json ContentType.
-type CheckDomainJSONRequestBody = CheckDomainParams
-
-// ProvisionSiteJSONRequestBody defines body for ProvisionSite for application/json ContentType.
-type ProvisionSiteJSONRequestBody = ProvisionSiteRequest
-
-// ProvisionHealthcheckJSONRequestBody defines body for ProvisionHealthcheck for application/json ContentType.
-type ProvisionHealthcheckJSONRequestBody = HealthcheckProvisionRequest
